faclib/f2c.h

extern void f_lmder(void (*)(int *,int *,double *,double *,double *,int *,int *),int,int,double *,double *,double *,int,double,double,double,int,double *,int,double,int,int *,int *,int *,int *,double *,double *,double *,double *,double *);
#define LMDER(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10,a11,a12,a13,a14,a15,a16,a17,a18,a19,a20,a21,a22,a23) f_lmder((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10),(a11),(a12),(a13),(a14),(a15),(a16),(a17),(a18),(a19),(a20),(a21),(a22),(a23))
extern void f_chkder(int,int,double *,double *,double *,int,double *,double *,int,double *);
#define CHKDER(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9) f_chkder((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9))
extern double f_ddot(int,double *,int,double *,int);
#define DDOT(a0,a1,a2,a3,a4) f_ddot((a0),(a1),(a2),(a3),(a4))
extern void f_dscal(int,double,double *,int);
#define DSCAL(a0,a1,a2,a3) f_dscal((a0),(a1),(a2),(a3))
extern void f_dgemv(char *,int,int,double,double *,int,double *,int,double,double *,int);
#define DGEMV(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10) f_dgemv((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10))
extern void f_dsbev(char *,char *,int,int,double *,int,double *,double *,int,double *,int *);
#define DSBEV(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10) f_dsbev((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10))
extern void f_dspevd(char *,char *,int,double *,double *,double *,int,double *,int,int *,int,int *);
#define DSPEVD(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10,a11) f_dspevd((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10),(a11))
extern void f_dspev(char *,char *,int,double *,double *,double *,int,double *,int *);
#define DSPEV(a0,a1,a2,a3,a4,a5,a6,a7,a8) f_dspev((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8))
extern void f_dgeev(char *,char *,int,double *,int,double *,double *,double *,int,double *,int,double *,int,int *);
#define DGEEV(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10,a11,a12,a13) f_dgeev((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10),(a11),(a12),(a13))
extern void f_dgesv(int,int,double *,int,int *,double *,int,int *);
#define DGESV(a0,a1,a2,a3,a4,a5,a6,a7) f_dgesv((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7))
extern void f_dgesdd(char *,int,int,double *,int,double *,double *,int,double *,int,double *,int,int *,int *);
#define DGESDD(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10,a11,a12,a13) f_dgesdd((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10),(a11),(a12),(a13))
extern void f_dgbsv(int,int,int,int,double *,int,int *,double *,int,int *);
#define DGBSV(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9) f_dgbsv((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9))
extern void f_lsode(void (*)(int *,double *,double *,double *),int *,double *,double *,double,int,double,double *,int,int *,int,double *,int,int *,int,void (*)(int *,double *,double *,int *,int *,double *,int *),int);
#define LSODE(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10,a11,a12,a13,a14,a15,a16) f_lsode((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10),(a11),(a12),(a13),(a14),(a15),(a16))
extern void f_dqagi(double (*)(double *),double,int,double,double,double *,double *,int *,int *,int,int,int *,int *,double *);
#define DQAGI(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10,a11,a12,a13) f_dqagi((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10),(a11),(a12),(a13))
extern void f_dqng(double (*)(double *),double,double,double,double,double *,double *,int *,int *);
#define DQNG(a0,a1,a2,a3,a4,a5,a6,a7,a8) f_dqng((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8))
extern void f_dqags(double (*)(double *),double,double,double,double,double *,double *,int *,int *,int,int,int *,int *,double *);
#define DQAGS(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10,a11,a12,a13) f_dqags((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10),(a11),(a12),(a13))
extern void f_fermid(double,double,double,double *,int *);
#define FERMID(a0,a1,a2,a3,a4) f_fermid((a0),(a1),(a2),(a3),(a4))
extern void f_ferinc(double,double,double,double,double *,int *);
#define FERINC(a0,a1,a2,a3,a4,a5) f_ferinc((a0),(a1),(a2),(a3),(a4),(a5))
extern void f_ionis(int,int,double,double *,double *,double *);
#define IONIS(a0,a1,a2,a3,a4,a5) f_ionis((a0),(a1),(a2),(a3),(a4),(a5))
extern void f_recomb(int,int,double,double *,double *);
#define RECOMB(a0,a1,a2,a3,a4) f_recomb((a0),(a1),(a2),(a3),(a4))
extern void f_recombfe(int,int,double,double *,double *);
#define RECOMBFE(a0,a1,a2,a3,a4) f_recombfe((a0),(a1),(a2),(a3),(a4))
extern void f_nrrfit(int,int,double,double *);
#define NRRFIT(a0,a1,a2,a3) f_nrrfit((a0),(a1),(a2),(a3))
extern void f_ndrfit(int,int,double,double *);
#define NDRFIT(a0,a1,a2,a3) f_ndrfit((a0),(a1),(a2),(a3))
extern void f_rrfit(int,int,double,double *);
#define RRFIT(a0,a1,a2,a3) f_rrfit((a0),(a1),(a2),(a3))
extern void f_drfit(int,int,double,double *);
#define DRFIT(a0,a1,a2,a3) f_drfit((a0),(a1),(a2),(a3))
extern void f_phfit2(int,int,int,double,double *);
#define PHFIT2(a0,a1,a2,a3,a4) f_phfit2((a0),(a1),(a2),(a3),(a4))