faclib/f2c.f90


subroutine f_lmder(a0,a1,a2,a3,a4,&
                   a5,a6,a7,a8,a9,&
                   a10,a11,a12,a13,a14,&
                   a15,a16,a17,a18,a19,&
                   a20,a21,a22,a23) bind(C, name='f_lmder')
type(c_funptr), value :: a0
integer(c_int), value :: a1
integer(c_int), value :: a2
real(c_double) :: a3(*)
real(c_double) :: a4(*)
real(c_double) :: a5(*)
integer(c_int), value :: a6
real(c_double), value :: a7
real(c_double), value :: a8
real(c_double), value :: a9
integer(c_int), value :: a10
real(c_double) :: a11(*)
integer(c_int), value :: a12
real(c_double), value :: a13
integer(c_int), value :: a14
integer(c_int) :: a15(*)
integer(c_int) :: a16(*)
integer(c_int) :: a17(*)
integer(c_int) :: a18(*)
real(c_double) :: a19(*)
real(c_double) :: a20(*)
real(c_double) :: a21(*)
real(c_double) :: a22(*)
real(c_double) :: a23(*)
interface
subroutine c0(m,n,x,fv,fj,ldfj,iflag)
import :: c_int, c_double
integer(c_int) :: m, n, ldfj, iflag
real(c_double), dimension(n) :: x
real(c_double), dimension(m) :: fv
real(c_double), dimension(ldfj,n) :: fj
end subroutine
end interface
procedure(c0), pointer :: p0
call c_f_procpointer(a0,p0)
call LMDER(p0,a1,a2,a3,a4,&
           a5,a6,a7,a8,a9,&
           a10,a11,a12,a13,a14,&
           a15,a16,a17,a18,a19,&
           a20,a21,a22,a23)
end subroutine

subroutine f_chkder(a0,a1,a2,a3,a4,&
                    a5,a6,a7,a8,a9) bind(C, name='f_chkder')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double) :: a2(*)
real(c_double) :: a3(*)
real(c_double) :: a4(*)
integer(c_int), value :: a5
real(c_double) :: a6(*)
real(c_double) :: a7(*)
integer(c_int), value :: a8
real(c_double) :: a9(*)
call CHKDER(a0,a1,a2,a3,a4,&
            a5,a6,a7,a8,a9)
end subroutine

function f_ddot(a0,a1,a2,a3,a4) bind(C, name='f_ddot')
integer(c_int), value :: a0
real(c_double) :: a1(*)
integer(c_int), value :: a2
real(c_double) :: a3(*)
integer(c_int), value :: a4
real(c_double) :: f_ddot, DDOT
f_ddot = DDOT(a0,a1,a2,a3,a4)
end function

subroutine f_dscal(a0,a1,a2,a3) bind(C, name='f_dscal')
integer(c_int), value :: a0
real(c_double), value :: a1
real(c_double) :: a2(*)
integer(c_int), value :: a3
call DSCAL(a0,a1,a2,a3)
end subroutine

subroutine f_dgemv(a0,a1,a2,a3,a4,&
                   a5,a6,a7,a8,a9,&
                   a10) bind(C, name='f_dgemv')
character(c_char) :: a0(*)
integer(c_int), value :: a1
integer(c_int), value :: a2
real(c_double), value :: a3
real(c_double) :: a4(*)
integer(c_int), value :: a5
real(c_double) :: a6(*)
integer(c_int), value :: a7
real(c_double), value :: a8
real(c_double) :: a9(*)
integer(c_int), value :: a10
call DGEMV(a0,a1,a2,a3,a4,&
           a5,a6,a7,a8,a9,&
           a10)
end subroutine

subroutine f_dsbev(a0,a1,a2,a3,a4,&
                   a5,a6,a7,a8,a9,&
                   a10) bind(C, name='f_dsbev')
character(c_char) :: a0(*)
character(c_char) :: a1(*)
integer(c_int), value :: a2
integer(c_int), value :: a3
real(c_double) :: a4(*)
integer(c_int), value :: a5
real(c_double) :: a6(*)
real(c_double) :: a7(*)
integer(c_int), value :: a8
real(c_double) :: a9(*)
integer(c_int) :: a10(*)
call DSBEV(a0,a1,a2,a3,a4,&
           a5,a6,a7,a8,a9,&
           a10)
end subroutine

subroutine f_dspevd(a0,a1,a2,a3,a4,&
                    a5,a6,a7,a8,a9,&
                    a10,a11) bind(C, name='f_dspevd')
character(c_char) :: a0(*)
character(c_char) :: a1(*)
integer(c_int), value :: a2
real(c_double) :: a3(*)
real(c_double) :: a4(*)
real(c_double) :: a5(*)
integer(c_int), value :: a6
real(c_double) :: a7(*)
integer(c_int), value :: a8
integer(c_int) :: a9(*)
integer(c_int), value :: a10
integer(c_int) :: a11(*)
call DSPEVD(a0,a1,a2,a3,a4,&
            a5,a6,a7,a8,a9,&
            a10,a11)
end subroutine

subroutine f_dspev(a0,a1,a2,a3,a4,&
                   a5,a6,a7,a8) bind(C, name='f_dspev')
character(c_char) :: a0(*)
character(c_char) :: a1(*)
integer(c_int), value :: a2
real(c_double) :: a3(*)
real(c_double) :: a4(*)
real(c_double) :: a5(*)
integer(c_int), value :: a6
real(c_double) :: a7(*)
integer(c_int) :: a8(*)
call DSPEV(a0,a1,a2,a3,a4,&
           a5,a6,a7,a8)
end subroutine

subroutine f_dgeev(a0,a1,a2,a3,a4,&
                   a5,a6,a7,a8,a9,&
                   a10,a11,a12,a13) bind(C, name='f_dgeev')
character(c_char) :: a0(*)
character(c_char) :: a1(*)
integer(c_int), value :: a2
real(c_double) :: a3(*)
integer(c_int), value :: a4
real(c_double) :: a5(*)
real(c_double) :: a6(*)
real(c_double) :: a7(*)
integer(c_int), value :: a8
real(c_double) :: a9(*)
integer(c_int), value :: a10
real(c_double) :: a11(*)
integer(c_int), value :: a12
integer(c_int) :: a13(*)
call DGEEV(a0,a1,a2,a3,a4,&
           a5,a6,a7,a8,a9,&
           a10,a11,a12,a13)
end subroutine

subroutine f_dgesv(a0,a1,a2,a3,a4,&
                   a5,a6,a7) bind(C, name='f_dgesv')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double) :: a2(*)
integer(c_int), value :: a3
integer(c_int) :: a4(*)
real(c_double) :: a5(*)
integer(c_int), value :: a6
integer(c_int) :: a7(*)
call DGESV(a0,a1,a2,a3,a4,&
           a5,a6,a7)
end subroutine

subroutine f_dgesdd(a0,a1,a2,a3,a4,&
                    a5,a6,a7,a8,a9,&
                    a10,a11,a12,a13) bind(C, name='f_dgesdd')
character(c_char) :: a0(*)
integer(c_int), value :: a1
integer(c_int), value :: a2
real(c_double) :: a3(*)
integer(c_int), value :: a4
real(c_double) :: a5(*)
real(c_double) :: a6(*)
integer(c_int), value :: a7
real(c_double) :: a8(*)
integer(c_int), value :: a9
real(c_double) :: a10(*)
integer(c_int), value :: a11
integer(c_int) :: a12(*)
integer(c_int) :: a13(*)
call DGESDD(a0,a1,a2,a3,a4,&
            a5,a6,a7,a8,a9,&
            a10,a11,a12,a13)
end subroutine

subroutine f_dgbsv(a0,a1,a2,a3,a4,&
                   a5,a6,a7,a8,a9) bind(C, name='f_dgbsv')
integer(c_int), value :: a0
integer(c_int), value :: a1
integer(c_int), value :: a2
integer(c_int), value :: a3
real(c_double) :: a4(*)
integer(c_int), value :: a5
integer(c_int) :: a6(*)
real(c_double) :: a7(*)
integer(c_int), value :: a8
integer(c_int) :: a9(*)
call DGBSV(a0,a1,a2,a3,a4,&
           a5,a6,a7,a8,a9)
end subroutine

subroutine f_lsode(a0,a1,a2,a3,a4,&
                   a5,a6,a7,a8,a9,&
                   a10,a11,a12,a13,a14,&
                   a15,a16) bind(C, name='f_lsode')
type(c_funptr), value :: a0
integer(c_int) :: a1(*)
real(c_double) :: a2(*)
real(c_double) :: a3(*)
real(c_double), value :: a4
integer(c_int), value :: a5
real(c_double), value :: a6
real(c_double) :: a7(*)
integer(c_int), value :: a8
integer(c_int) :: a9(*)
integer(c_int), value :: a10
real(c_double) :: a11(*)
integer(c_int), value :: a12
integer(c_int) :: a13(*)
integer(c_int), value :: a14
type(c_funptr), value :: a15
integer(c_int), value :: a16
interface
subroutine c0(n, t, y, yd) bind(C)
import :: c_int, c_double
integer(c_int) :: n(*)
real(c_double) :: t(*),y(*),yd(*)
end subroutine
end interface

interface
subroutine c15(n,t,y,ml,mu,pd,nrpd) bind(C)
import :: c_int, c_double
integer(c_int) :: n(*), ml, mu, nrpd
real(c_double) :: t(*),y(*),pd(*)
end subroutine
end interface

procedure(c0), pointer :: p0
procedure(c15), pointer :: p15
call c_f_procpointer(a0, p0)
if (a16 .eq. 21 .or. a16 .eq. 24) then
  call c_f_procpointer(a15, p15)
endif
call LSODE(p0,a1,a2,a3,a4,&
           a5,a6,a7,a8,a9,&
           a10,a11,a12,a13,a14,&
           p15,a16)
end subroutine

subroutine f_dqagi(a0,a1,a2,a3,a4,&
                   a5,a6,a7,a8,a9,&
                   a10,a11,a12,a13) bind(C, name='f_dqagi')
type(c_funptr), value :: a0
real(c_double), value :: a1
integer(c_int), value :: a2
real(c_double), value :: a3
real(c_double), value :: a4
real(c_double) :: a5(*)
real(c_double) :: a6(*)
integer(c_int) :: a7(*)
integer(c_int) :: a8(*)
integer(c_int), value :: a9
integer(c_int), value :: a10
integer(c_int) :: a11(*)
integer(c_int) :: a12(*)
real(c_double) :: a13(*)
interface
function c0(x) bind(C)
import :: c_double
real(c_double) :: x
real(c_double) :: c0
end function
end interface

procedure(c0), pointer :: p0
call c_f_procpointer(a0, p0)
call DQAGI(p0,a1,a2,a3,a4,&
           a5,a6,a7,a8,a9,&
           a10,a11,a12,a13)
end subroutine

subroutine f_dqng(a0,a1,a2,a3,a4,&
                  a5,a6,a7,a8) bind(C, name='f_dqng')
type(c_funptr), value :: a0
real(c_double), value :: a1
real(c_double), value :: a2
real(c_double), value :: a3
real(c_double), value :: a4
real(c_double) :: a5(*)
real(c_double) :: a6(*)
integer(c_int) :: a7(*)
integer(c_int) :: a8(*)
interface
function c0(x) bind(C)
import :: c_double
real(c_double) :: x
real(c_double) :: c0
end function
end interface

procedure(c0), pointer :: p0
call c_f_procpointer(a0, p0)
call DQNG(p0,a1,a2,a3,a4,&
          a5,a6,a7,a8)
end subroutine

subroutine f_dqags(a0,a1,a2,a3,a4,&
                   a5,a6,a7,a8,a9,&
                   a10,a11,a12,a13) bind(C, name='f_dqags')
type(c_funptr), value :: a0
real(c_double), value :: a1
real(c_double), value :: a2
real(c_double), value :: a3
real(c_double), value :: a4
real(c_double) :: a5(*)
real(c_double) :: a6(*)
integer(c_int) :: a7(*)
integer(c_int) :: a8(*)
integer(c_int), value :: a9
integer(c_int), value :: a10
integer(c_int) :: a11(*)
integer(c_int) :: a12(*)
real(c_double) :: a13(*)
interface
function c0(x) bind(C)
import :: c_double
real(c_double) :: x
real(c_double) :: c0
end function
end interface

procedure(c0), pointer :: p0
call c_f_procpointer(a0, p0)
call DQAGS(p0,a1,a2,a3,a4,&
           a5,a6,a7,a8,a9,&
           a10,a11,a12,a13)
end subroutine

subroutine f_fermid(a0,a1,a2,a3,a4) bind(C, name='f_fermid')
real(c_double), value :: a0
real(c_double), value :: a1
real(c_double), value :: a2
real(c_double) :: a3(*)
integer(c_int) :: a4(*)
call FERMID(a0,a1,a2,a3,a4)
end subroutine

subroutine f_ferinc(a0,a1,a2,a3,a4,&
                    a5) bind(C, name='f_ferinc')
real(c_double), value :: a0
real(c_double), value :: a1
real(c_double), value :: a2
real(c_double), value :: a3
real(c_double) :: a4(*)
integer(c_int) :: a5(*)
call FERINC(a0,a1,a2,a3,a4,&
            a5)
end subroutine

subroutine f_ionis(a0,a1,a2,a3,a4,&
                   a5) bind(C, name='f_ionis')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double), value :: a2
real(c_double) :: a3(*)
real(c_double) :: a4(*)
real(c_double) :: a5(*)
call IONIS(a0,a1,a2,a3,a4,&
           a5)
end subroutine

subroutine f_recomb(a0,a1,a2,a3,a4) bind(C, name='f_recomb')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double), value :: a2
real(c_double) :: a3(*)
real(c_double) :: a4(*)
call RECOMB(a0,a1,a2,a3,a4)
end subroutine

subroutine f_recombfe(a0,a1,a2,a3,a4) bind(C, name='f_recombfe')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double), value :: a2
real(c_double) :: a3(*)
real(c_double) :: a4(*)
call RECOMBFE(a0,a1,a2,a3,a4)
end subroutine

subroutine f_nrrfit(a0,a1,a2,a3) bind(C, name='f_nrrfit')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double), value :: a2
real(c_double) :: a3(*)
call NRRFIT(a0,a1,a2,a3)
end subroutine

subroutine f_ndrfit(a0,a1,a2,a3) bind(C, name='f_ndrfit')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double), value :: a2
real(c_double) :: a3(*)
call NDRFIT(a0,a1,a2,a3)
end subroutine

subroutine f_rrfit(a0,a1,a2,a3) bind(C, name='f_rrfit')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double), value :: a2
real(c_double) :: a3(*)
call RRFIT(a0,a1,a2,a3)
end subroutine

subroutine f_drfit(a0,a1,a2,a3) bind(C, name='f_drfit')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double), value :: a2
real(c_double) :: a3(*)
call DRFIT(a0,a1,a2,a3)
end subroutine

subroutine f_phfit2(a0,a1,a2,a3,a4) bind(C, name='f_phfit2')
integer(c_int), value :: a0
integer(c_int), value :: a1
integer(c_int), value :: a2
real(c_double), value :: a3
real(c_double) :: a4(*)
call PHFIT2(a0,a1,a2,a3,a4)
end subroutine
